[gd_scene load_steps=4 format=3 uid="uid://vqcyti7i6ny6"]

[ext_resource type="Script" uid="uid://dnhqtspsdi8l2" path="res://scenes/chat/chat.gd" id="1_1uvf6"]
[ext_resource type="PackedScene" uid="uid://ck25xcihd5kdq" path="res://scenes/chat/chat_message.tscn" id="2_r67cr"]
[ext_resource type="Script" uid="uid://c533nlyd7qvnu" path="res://scenes/chat/image_cache.gd" id="3_xe7gi"]

[node name="Chat" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1uvf6")
chat_message = ExtResource("2_r67cr")

[node name="Twitch" type="TwitchEventNode" parent="."]
unique_name_in_owner = true

[node name="ImageCache" type="Node" parent="." node_paths=PackedStringArray("twitch")]
unique_name_in_owner = true
script = ExtResource("3_xe7gi")
twitch = NodePath("../Twitch")

[connection signal="chat_message" from="Twitch" to="." method="_on_twitch_chat_message"]
